--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 relm4 = "0.9.1"
 relm4-components = "0.9.1"
 relm4-macros = "0.9.1"
+
+clap = { version = "4.5.37", features = ["derive"] }
 tracker = "0.2.2"
 notify = "8.0.0"
 dirs = "6.0.0"
